# megasena-scraper

./: .gitignore  README.md  buscador.py  pyproject.toml
